--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
   "devDependencies": {
     "@data-fair/sd-vue": "1.4.1-beta.6",
     "@koumoul/v-iframe": "^0.10.0",
-    "@koumoul/vjsf": "2.13.0",
+    "@koumoul/vjsf": "2.17.0",
     "@koumoul/vue-multianalytics": "^1.11.3",
     "@mdi/font": "^6.5.95",
     "@nuxtjs/google-fonts": "^1.3.0",
@@ -100,6 +100,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-vue": "^8.5.0",
+    "google-fonts-complete": "^2.1.1",
     "http-proxy-middleware": "^1.0.6",
     "iframe-resizer": "4.0.4",
     "js-file-download": "^0.4.12",
