--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - OPENAPI_VIEWER_URL=http://localhost:6200/openapi-viewer/
       - NOTIFY_URL=http://localhost:6200/notify
       - DIRECTORY_URL=http://localhost:6200/simple-directory
+      - CAPTURE_URL=http://localhost:6200/capture
+      - PRIVATE_URL=http://localhost:8087
       - PUBLIC_URL=http://localhost:6200/data-fair
       - WS_PUBLIC_URL=ws://localhost:6200/data-fair
       - EXTRA_NAV_ITEMS=[{"id":"portal","iframe":"http://localhost:6200/manager/portals","icon":"mdi-presentation","title":"Portail de données"}]
@@ -64,7 +66,7 @@ services:
       - 6202:8080
 
   capture:
-    image: koumoul/capture:master
+    image: ghcr.io/data-fair/capture:master
     network_mode: host
     shm_size: '1gb'
     environment:
