--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "mime-types": "^2.1.35",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
+    "nanoid": "^3.3.4",
     "nodemailer": "^6.5.0",
     "nodemon": "^1.19.3",
     "nuxt-start": "^2.15.8",
@@ -78,7 +79,7 @@
     "reconnecting-websocket": "^4.4.0",
     "request-ip": "^2.1.3",
     "run": "^1.4.0",
-    "sanitize-html": "^2.5.0",
+    "sanitize-html": "^2.7.2",
     "sharp": "^0.30.7",
     "shortid": "^2.2.16",
     "slugify": "^1.4.6",
