--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,13 @@ jobs:
     - name: Checkout git repository
       uses: actions/checkout@v2
     
+    # no need to work on a cache here, it is not faster than pulling
+    # instead work on moving to some images hosted on ghcr.io, it is the fastest
+    - name: Run test dependencies
+      run: |
+        NO_UI=true docker-compose --profile test up -d
+        docker ps
+
     - name: Prepare docker image tags
       id: docker_meta
       uses: crazy-max/ghaction-docker-meta@v1
@@ -29,6 +36,8 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+      with:
+        driver-opts: network=host
 
     - name: Login to Github container registry
       uses: docker/login-action@v1
@@ -50,8 +59,13 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.docker_meta.outputs.tags }}
         labels: ${{ steps.docker_meta.outputs.labels }}
+        allow: network.host
+        network: host
         cache-from: type=gha
         cache-to: type=gha,mode=max
+
+    - name: Stop test dependencies
+      run: docker-compose stop
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
@@ -62,3 +76,4 @@ jobs:
     - name: Send Keel notification to koumoul.com
       run: |
         curl -s --fail --show-error -X POST https://keel.admin.koumoul.com/v1/webhooks/native -u ${{ secrets.KEEL_PROD_USER }}:${{ secrets.KEEL_PROD_PASSWORD }} -d '{"name": "ghcr.io/${{ github.repository }}", "tag": "${{ steps.docker_meta.outputs.version }}"}'
+
