--- a/contract/config.json
+++ b/contract/config.json
@@ -120,7 +120,7 @@
       "bodyFont": {
         "title": "Police principale",
         "type": "object",
-        "x-fromUrl": "{context.portalUrl}/fonts",
+        "x-fromData": "context.fonts",
         "x-itemTitle": "label",
         "x-itemKey": "name",
         "description": "Ces polices sont issues de Google Fonts. La police par défaut est Nunito."
@@ -128,7 +128,7 @@
       "headingsFont": {
         "title": "Police des titres",
         "type": "object",
-        "x-fromUrl": "{context.portalUrl}/fonts",
+        "x-fromData": "context.fonts",
         "x-itemTitle": "label",
         "x-itemKey": "name",
         "description": "Ces polices sont issues de Google Fonts. Par défaut la police principale est appliquée."
