design: small stuff

--- a/contract/config.json
+++ b/contract/config.json
@@ -185,7 +185,7 @@
           "title": "dégradé couleur secondaire vers couleur principale"
         }, {
           "const": "grey",
-          "title": "gris"
+          "title": "gris foncé"
         }, {
           "const": "white",
           "title": "blanc"
